[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -241,7 +241,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="enable_undo_and_redo_be_patient">啟用復原和重做動作，僅適用於進階使用，請小心以免刪除重要資料。關閉再開啟編輯器可以清除歷史紀錄。</string>
     <string name="description">詳情</string>
     <string name="edit_picture">編輯圖片</string>
-    <string name="math">數學</string>
+    <string name="math">數學公式及符號</string>
     <string name="table_of_contents">目錄</string>
     <string name="miscellaneous">其他</string>
     <string name="textaction">純文字 動作</string>
@@ -334,14 +334,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="common_color_picker">顏色選擇器</string>
     <string name="date_and_time">日期與時間</string>
     <string name="jump_to_bottom">跳到底部</string>
-    <string name="quote">引述</string>
+    <string name="quote">引用</string>
     <string name="heading">標題</string>
-    <string name="heading_1">標題大小1</string>
-    <string name="heading_2">標題大小2</string>
-    <string name="heading_3">標題大小3</string>
-    <string name="heading_4">標題大小4</string>
-    <string name="heading_5">標題大小5</string>
-    <string name="heading_6">標題大小6</string>
+    <string name="heading_1">標題 1</string>
+    <string name="heading_2">標題 2</string>
+    <string name="heading_3">標題 3</string>
+    <string name="heading_4">標題 4</string>
+    <string name="heading_5">標題 5</string>
+    <string name="heading_6">標題 6</string>
     <string name="bold">粗體</string>
     <string name="italic">斜體</string>
     <string name="highlighted">突出顯示</string>
