[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -157,12 +157,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_current_date_when_starting_new_task">當開始一項新工作時插入當今日期</string>
     <string name="tasks_with_todays_date">有今天日期的工作</string>
     <string name="append_contexts_and_projects">增補內文與專案等</string>
-    <string name="append_contexts_and_projects_on_end_of_task">使用適當的文字動作時在任務的結尾加入情境或專案</string>
+    <string name="append_contexts_and_projects_on_end_of_task">使用對應的文字動作時，在任務的結尾加入情境或專案</string>
     <string name="rtl_rendering">RTL 顯現</string>
     <string name="highlight_line_ending">標記行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">標記末尾有兩三個空格的行</string>
     <string name="use_monospace_for_code">程式碼使用 Monospace</string>
-    <string name="disable_code_block_highlight">停用代碼語法突顯</string>
+    <string name="disable_code_block_highlight">停用程式碼語法突顯</string>
     <string name="auto_renumber_ordered_list">有序清單自動重新編號</string>
     <string name="auto_renumber_ordered_list_slowdown">此設定可能影響應用程式效能</string>
     <string name="use_different_fonttype_slow_down">動態地變更字型將影響程式效能</string>
@@ -228,8 +228,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">保留鍵盤輸入時顯示的文字建議，移除紅色底線</string>
     <string name="location">地點</string>
     <string name="text_lines">文字行</string>
-    <string name="text_characters">純文字字元</string>
-    <string name="text_words">純文字 字詞</string>
+    <string name="text_characters">字元</string>
+    <string name="text_words">字詞</string>
     <string name="directory">資料夾</string>
     <string name="recently_viewed_documents">最近開啟的檔案</string>
     <string name="details">細節</string>
@@ -244,8 +244,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="math">數學公式及符號</string>
     <string name="table_of_contents">目錄</string>
     <string name="miscellaneous">其他</string>
-    <string name="textaction">純文字 動作</string>
-    <string name="textactions">純文字 動作</string>
+    <string name="textaction">文字動作</string>
+    <string name="textactions">文字動作</string>
     <string name="prefer_view">喜好 檢視</string>
     <string name="no_calendar_app_is_installed">未找到日曆應用程式</string>
     <string name="popular_documents">偏好 文件</string>
@@ -307,10 +307,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tab_width">製表符寬度</string>
     <string name="amount_of_space_for_tab">表格需要的空間字元數量</string>
     <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">所選的檔案可能是純文字文件，您想用文字編輯器或是他程式開啟？\n\n執行檔案無法開啟，如果不確定，以其他程式開啟。</string>
-    <string name="list_in_recent_files">最近使用文件的清單</string>
+    <string name="list_in_recent_files">最近開啟的文件的列表</string>
     <string name="reload">重新下載</string>
     <string name="wrap_words">文字折行</string>
-    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">如果文字不能配合螢幕的寬度顯示會斷行，可以啟用水平捲動。</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">如果文字超過螢幕寬度時會自動換行。停用該功能則開啟水平捲動。</string>
     <string name="recursive_search_in_current_directory">在本目錄遞迴搜尋</string>
     <string name="always_open_with_this_app">永遠使用此應用程式開啟</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">當清單的項目裡包含延伸檔名時，總是以這個程式開啟檔案。例如您要編輯沒有延伸檔名的網頁檔案時可以使用\'None, .html, .css , .js\'等。</string>
@@ -327,10 +327,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">閱讀中</string>
     <string name="table">表格</string>
     <string name="delete_lines">刪除線</string>
-    <string name="unordered_list">無排序清單</string>
+    <string name="unordered_list">無序清單</string>
     <string name="ordered_list">有序列表</string>
     <string name="check_list">檢查清單</string>
-    <string name="open_link">開啟鏈接</string>
+    <string name="open_link">開啟連結</string>
     <string name="common_color_picker">顏色選擇器</string>
     <string name="date_and_time">日期與時間</string>
     <string name="jump_to_bottom">跳到底部</string>
@@ -347,7 +347,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighted">突出顯示</string>
     <string name="strikeout">刪除線</string>
     <string name="inline_code">行間內程式碼</string>
-    <string name="horizontal_line">水平分隔線</string>
+    <string name="horizontal_line">分隔線</string>
     <string name="link_color">連結顏色</string>
     <string name="add_context">加入情境</string>
     <string name="create_new_file_or_folder">建立新檔案或資料夾</string>
