[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -246,11 +246,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="miscellaneous">其他</string>
     <string name="textaction">文字動作</string>
     <string name="textactions">文字動作</string>
-    <string name="prefer_view">喜好 檢視</string>
+    <string name="prefer_view">預設檢視</string>
     <string name="no_calendar_app_is_installed">未找到日曆應用程式</string>
-    <string name="popular_documents">偏好 文件</string>
+    <string name="popular_documents">常用文件</string>
     <string name="color">顏色</string>
-    <string name="zero_width_space">零寬度空格</string>
+    <string name="zero_width_space">零寬空格</string>
     <string name="basic_color_scheme">基本顏色主題</string>
     <string name="background_foreground_color_in_editor_works_dark_light">Changes background and foreground color of the text editor. Adjusts to app theme so available in light and dark theme. Syntax highlighting colors remain the same.</string>
     <string name="preset">預設值</string>
@@ -259,12 +259,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="set_foreground_or_background_color_hexcolor_also_possible">要設定文字的前景色和背景顏色嗎？也可以插入 Hex 顏色代碼。</string>
     <string name="type">檔案類型</string>
     <string name="folder">資料夾</string>
-    <string name="folder_is_created_without_extension">建立的資料夾沒有延伸檔名</string>
+    <string name="folder_is_created_without_extension">- 建立資料夾時不會有副檔名</string>
     <string name="keep_existing_file">- 不會覆寫檔案與資料夾</string>
     <string name="multiple_windows">多重視窗</string>
-    <string name="font">字體</string>
+    <string name="font">字型</string>
     <string name="open_new_documents_always_in_new_window">使用您裝置上的\"最近的\"鍵以切換成總是在分別的視窗開啟文件。</string>
-    <string name="enter_or_select_format">輸入或選取格式</string>
+    <string name="enter_or_select_format">輸入或選擇格式</string>
     <string name="pick_date">選擇日期</string>
     <string name="pick_time">選擇時間</string>
     <string name="get_format_instead_date_or_time">取代日期或時間的格式</string>
