--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -303,8 +303,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="favourite">新增至我的最愛</string>
     <string name="favourites">最愛列表</string>
     <string name="please_wait">請稍候</string>
-    <string name="app_start_folder">程式啟動時跳轉資料夾</string>
-    <string name="tab_width">製表符寬度</string>
+    <string name="app_start_folder">啟動時跳轉的資料夾</string>
+    <string name="tab_width">制表符寬度</string>
     <string name="amount_of_space_for_tab">表格需要的空間字元數量</string>
     <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">所選的檔案可能是純文字文件，您想用文字編輯器或是他程式開啟？\n\n執行檔案無法開啟，如果不確定，以其他程式開啟。</string>
     <string name="list_in_recent_files">最近開啟的文件列表</string>
