--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -297,7 +297,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="view">檢視</string>
     <string name="view_mode">檢視模式</string>
     <string name="edit_mode">編輯模式</string>
-    <string name="mount_storage">掛接儲存裝置</string>
+    <string name="mount_storage">掛載儲存裝置</string>
     <string name="application_needs_access_to_storage_mount_it">存取儲存空間需要權限，儲存空間掛載後才能存取；在跳出的對話框選擇儲存的位置，按下確認。</string>
     <string name="share_into">分享至</string>
     <string name="favourite">新增至我的最愛</string>
@@ -305,7 +305,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="please_wait">請稍候</string>
     <string name="app_start_folder">啟動時跳轉的資料夾</string>
     <string name="tab_width">制表符寬度</string>
-    <string name="amount_of_space_for_tab">表格需要的空間字元數量</string>
+    <string name="amount_of_space_for_tab">指定表格顯示的空格字元數</string>
     <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">所選的檔案可能是純文字文件，您想用文字編輯器或是他程式開啟？\n\n執行檔案無法開啟，如果不確定，以其他程式開啟。</string>
     <string name="list_in_recent_files">最近開啟的文件列表</string>
     <string name="reload">重新下載</string>
