[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -280,14 +280,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_tab">啟動時顯示的頁面</string>
     <string name="tab_to_select_at_start">開啟應用程式時，選擇要顯示的頁面</string>
     <string name="swipe_to_change_mode">滑動以更改模式</string>
-    <string name="swipe_to_change_to_edit_or_view_mode">滑動以變更編輯或檢視模式(現行模式的反向操作)</string>
-    <string name="folder_first">資料夾優先</string>
+    <string name="swipe_to_change_to_edit_or_view_mode">滑動以變更編輯或檢視模式（目前模式的反向操作）</string>
+    <string name="folder_first">資料夾在前</string>
     <string name="go_to">前往</string>
-    <string name="appdata_public">應用程式資料(公開)</string>
-    <string name="appdata_private">應用程式資料(私人)</string>
-    <string name="appdata_sdcard">應用程式資料(SD卡)</string>
+    <string name="appdata_public">應用程式資料（公開）</string>
+    <string name="appdata_private">應用程式資料（私人）</string>
+    <string name="appdata_sdcard">應用程式資料 (SD卡)</string>
     <string name="internal_storage">內部儲存空間</string>
-    <string name="open_the_document_from_main_view">您可以從底部的主檢視區藉由檔案管理程式或啟動器開啟文件，另外還有一個選項是分享附加的文字給Markor。</string>
+    <string name="open_the_document_from_main_view">您可以從主檢視區的底部，檔案瀏覽器或啟動器中開啟文件，您還可以將文字分享至 Markor。</string>
     <string name="notebook_is_the_home_of_your_files">「筆記本」是 Markor 啟動時在檔案管理器中的載入的資料夾，也是您檔案的主資料夾。</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">「QuickNote」是快速紀錄筆記的最佳選擇，以 Markdown 格式存放在預設位置 &gt;Notebook/QuickNote.md&lt;，您可以在設定裡自訂檔案路徑。</string>
     <string name="todo_is_the_easiest_way_">「ToDo」可以用來管理您的工作任務，以 todo.txt 格式存放在預設位置 &gt;Notebook/todo.txt&lt;，您可以在設定裡自訂檔案路徑。</string>
@@ -309,7 +309,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">所選的檔案可能是純文字文件，您想用文字編輯器或是他程式開啟？\n\n執行檔案無法開啟，如果不確定，以其他程式開啟。</string>
     <string name="list_in_recent_files">最近開啟的文件列表</string>
     <string name="reload">重新下載</string>
-    <string name="wrap_words">文字折行</string>
+    <string name="wrap_words">文字斷行</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">如果文字超過螢幕寬度時會自動換行。停用該功能則開啟水平捲動。</string>
     <string name="recursive_search_in_current_directory">在本目錄遞迴搜尋</string>
     <string name="always_open_with_this_app">永遠使用此應用程式開啟</string>
@@ -317,23 +317,25 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="template">模板</string>
     <string name="send_debug_log">發送偵錯日誌</string>
     <string name="print_pdf">列印 / PDF</string>
-    <string name="current">現在</string>
+    <string name="current">目前</string>
     <string name="record_audio">錄音</string>
     <string name="attach">附件</string>
     <string name="copy_file">複製檔案</string>
     <string name="page">頁面</string>
     <string name="experimental_features">實驗性功能</string>
     <string name="tools">工具</string>
-    <string name="reading">閱讀中</string>
+    <string name="reading">讀取中</string>
+    <string name="read">讀取</string>
     <string name="table">表格</string>
+    <string name="example_of_a_markdown_table">Markdown 表格示例</string>
     <string name="delete_lines">刪除線</string>
     <string name="unordered_list">無序清單</string>
-    <string name="ordered_list">有序列表</string>
+    <string name="ordered_list">有序清單</string>
     <string name="check_list">檢查清單</string>
     <string name="open_link">開啟連結</string>
     <string name="common_color_picker">顏色選擇器</string>
     <string name="date_and_time">日期與時間</string>
-    <string name="jump_to_bottom">跳到底部</string>
+    <string name="jump_to_bottom">跳至底部</string>
     <string name="quote">引用</string>
     <string name="heading">標題</string>
     <string name="heading_1">標題 1</string>
@@ -346,10 +348,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="italic">斜體</string>
     <string name="highlighted">突出顯示</string>
     <string name="strikeout">刪除線</string>
-    <string name="inline_code">行間內程式碼</string>
+    <string name="inline_code">行內程式碼</string>
     <string name="horizontal_line">分隔線</string>
+    <string name="toggle_done">切换完成</string>
     <string name="link_color">連結顏色</string>
     <string name="add_context">加入情境</string>
+    <string name="add_project">加入專案</string>
+    <string name="archive_completed_tasks">歸檔已完成的任務</string>
     <string name="create_new_file_or_folder">建立新檔案或資料夾</string>
     <string name="choose_format">選擇格式</string>
     <string name="selected">選擇</string>
