[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -157,7 +157,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_current_date_when_starting_new_task">當開始一項新工作時插入當今日期</string>
     <string name="tasks_with_todays_date">有今天日期的工作</string>
     <string name="append_contexts_and_projects">增補內文與專案等</string>
-    <string name="append_contexts_and_projects_on_end_of_task">使用對應的文字動作時，在任務的結尾加入情境或專案</string>
+    <string name="append_contexts_and_projects_on_end_of_task">使用對應的文字動作時，在任務的結尾加入情境與專案</string>
     <string name="rtl_rendering">RTL 顯現</string>
     <string name="highlight_line_ending">標記行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">標記末尾有兩三個空格的行</string>
@@ -263,12 +263,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="keep_existing_file">- 不會覆寫檔案與資料夾</string>
     <string name="multiple_windows">多重視窗</string>
     <string name="font">字型</string>
-    <string name="open_new_documents_always_in_new_window">始終在單獨的視窗開啟文件。您可以使用裝置的「最近」按鈕或手勢在視窗之間互相切換。</string>
+    <string name="open_new_documents_always_in_new_window">總是在單獨的視窗開啟文件。您可以使用裝置的「最近」按鈕或手勢在視窗之間互相切換。</string>
     <string name="enter_or_select_format">輸入或選擇格式</string>
     <string name="pick_date">選擇日期</string>
     <string name="pick_time">選擇時間</string>
     <string name="get_format_instead_date_or_time">不含日期或時間的原始格式</string>
-    <string name="always_use_current_date_and_time">始終使用目前的日期 &amp; 時間</string>
+    <string name="always_use_current_date_and_time">總是使用目前的日期 &amp; 時間</string>
     <string name="result">結果</string>
     <string name="just_time">僅時間</string>
     <string name="just_date">僅日期</string>
@@ -311,12 +311,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">重新下載</string>
     <string name="wrap_words">文字斷行</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">如果文字超過螢幕寬度時會自動換行。停用該功能則開啟水平捲動。</string>
-    <string name="recursive_search_in_current_directory">在本目錄遞迴搜尋</string>
-    <string name="always_open_with_this_app">永遠使用此應用程式開啟</string>
-    <string name="always_open_files_with_this_app_when_list_contains_file_extension">當清單的項目裡包含延伸檔名時，總是以這個程式開啟檔案。例如您要編輯沒有延伸檔名的網頁檔案時可以使用\'None, .html, .css , .js\'等。</string>
+    <string name="recursive_search_in_current_directory">在目前目錄中遞迴搜尋</string>
+    <string name="always_open_with_this_app">總是使用此應用程式開啟</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">當列表的項目裡包含副檔名時，總是以這個程式開啟檔案。如果您要編輯網頁檔案或其他不含附檔名的檔案時，可以使用 \'None, .html, .css , .js\' 等。</string>
     <string name="template">模板</string>
-    <string name="send_debug_log">發送偵錯日誌</string>
+    <string name="send_debug_log">傳送偵錯日誌</string>
     <string name="print_pdf">列印 / PDF</string>
+    <string name="bigger_headings">大標題</string>
+    <string name="increase_text_size_of_headings_according_to_level">根據標題層級 (# h1, ## h2. ### h3…) 增加標題的文字大小</string>
     <string name="current">目前</string>
     <string name="record_audio">錄音</string>
     <string name="attach">附件</string>
