--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -359,9 +359,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive_completed_tasks">歸檔已完成的任務</string>
     <string name="create_new_file_or_folder">建立新檔案或資料夾</string>
     <string name="choose_format">選擇格式</string>
-    <string name="selected">選擇</string>
+    <string name="selected">已選擇</string>
     <string name="back">返回</string>
-    <string name="expand_collapse">展開/摺疊</string>
+    <string name="expand_collapse">展開／摺疊</string>
+    <string name="toggle_action_visibility">切换動作可見性</string>
     <string name="load_default_settings">載入預設設定</string>
     <string name="drag">拖曳</string>
     <string name="created">已建立</string>
@@ -370,21 +371,36 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">程式碼區塊</string>
     <string name="loading_default_value">正在載入預設值</string>
     <string name="file_settings">檔案設定</string>
-    <string name="search_and_replace">搜尋/取代</string>
+    <string name="search_and_replace">搜尋 / 取代</string>
     <string name="search_for">搜尋</string>
     <string name="replace_with">取代為</string>
+    <string name="replace_once">取代 (1)</string>
     <string name="replace_all">全部取代</string>
     <string name="backup_settings">備份設定</string>
     <string name="restore_settings">還原設定</string>
     <string name="failed_to_create_backup">建立備份失敗</string>
-    <string name="export_settings_to_json_file">匯出設定至 JSON 文件</string>
+    <string name="export_settings_to_json_file">匯出設定至 JSON 檔案</string>
     <string name="case_sensitive">區分大小寫</string>
     <string name="keep_both">兩者都保留</string>
     <string name="skip">跳過</string>
     <string name="overwrite">覆寫</string>
+    <string name="keep_both_all">兩者都保留（全部）</string>
     <string name="skip_all">全部跳過</string>
     <string name="overwrite_all">全部覆寫</string>
+    <string name="copy_move_conflict_message">「%s」 已存在於 %s</string>
     <string name="additional_contexts_and_projects">常用的情境與專案</string>
     <string name="infinite">無限</string>
+    <string name="browse_by_project">依專案瀏覽</string>
+    <string name="browse_by_context">依情境瀏覽</string>
+    <string name="insert_project">插入專案</string>
+    <string name="insert_context">插入情境</string>
+    <string name="browse_todo">瀏覽待辦事項</string>
+    <string name="browse_by_priority">依優先級瀏覽</string>
+    <string name="browse_by_due_date">依到期日瀏覽</string>
+    <string name="due_overdue">逾期</string>
+    <string name="due_today">今天到期</string>
+    <string name="due_future">未來到期</string>
+    <string name="completed">已完成</string>
+    <string name="share_into_format">分享到 - 格式</string>
     <string name="auto_format">自動格式化</string>
 </resources>
