[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -387,6 +387,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="failed_to_create_backup">建立備份失敗</string>
     <string name="export_settings_to_json_file">匯出設定至 JSON 檔案</string>
     <string name="failed_to_restore_settings_from_backup">從備份還原設定失敗</string>
+    <string name="newline_is_new_paragraph">換行 = 新段落</string>
+    <string name="search_in_content">在内容中搜尋</string>
+    <string name="max_search_depth">搜尋深度</string>
+    <string name="ignore_list">忽略列表</string>
     <string name="case_sensitive">區分大小寫</string>
     <string name="keep_both">兩者都保留</string>
     <string name="skip">跳過</string>
