--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -403,6 +403,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="overwrite_all">全部覆寫</string>
     <string name="copy_move_conflict_message">「%s」 已存在於 %s</string>
     <string name="additional_contexts_and_projects">常用的情境與專案</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">輸入以空格分隔的 @情境 和 +專案，這些選項將一直顯示在 todo.txt 的插入欄位中。</string>
     <string name="infinite">無限</string>
     <string name="browse_by_project">依專案瀏覽</string>
     <string name="browse_by_context">依情境瀏覽</string>
@@ -417,6 +418,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="completed">已完成</string>
     <string name="match_any">任意匹配</string>
     <string name="match_all">匹配全部</string>
+    <string name="dynamic_notebook_root_links">動態搜尋筆記本根目錄</string>
     <string name="share_into_format">分享到 - 格式</string>
     <string name="auto_format">自動格式化</string>
     <string name="insert_snippet">插入片段</string>
