--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -386,6 +386,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="restore_settings">還原設定</string>
     <string name="failed_to_create_backup">建立備份失敗</string>
     <string name="export_settings_to_json_file">匯出設定至 JSON 檔案</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">從備份的 JSON 檔案中匯入設定。匯入成功後，應用程式將重新啟動。</string>
     <string name="failed_to_restore_settings_from_backup">從備份還原設定失敗</string>
     <string name="newline_is_new_paragraph">換行 = 新段落</string>
     <string name="search_in_content">在内容中搜尋</string>
