Update translations (PR #1633)

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Formato/prefijo para texto compartido en Markor. Sigue las reglas de SimpleDateFormat.\n\nUtilice el marcador de posición \'%s\' (rodeado por comillas simples) para colocar el texto compartido. Si no se especifica, el texto compartido se añade y el formato utilizado como prefijo.</string>
     <string name="share_into_format">Compartir en - Formato</string>
     <string name="auto_format">Auto-formato</string>
+    <string name="insert_snippet">Insertar fragmento</string>
 </resources>
