[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -329,6 +329,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">讀取中</string>
     <string name="read">讀取</string>
     <string name="table">表格</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">多少列呢？長按表格按鈕以開始一個表單，(插入抬頭)，短按會增加一行。</string>
     <string name="example_of_a_markdown_table">Markdown 表格示例</string>
     <string name="delete_lines">刪除線</string>
     <string name="unordered_list">無序清單</string>
@@ -363,17 +364,22 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">返回</string>
     <string name="expand_collapse">展開／摺疊</string>
     <string name="essential">基本設定</string>
+    <string name="append_human_readable_uuid_to_new_tasks">增添人類可讀的UUID到新任務</string>
     <string name="action_order">動作順序</string>
     <string name="toggle_action_visibility">切换動作可見性</string>
     <string name="load_default_settings">載入預設設定</string>
     <string name="drag">拖曳</string>
     <string name="created">已建立</string>
     <string name="file_encryption_password">檔案加密密碼</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">未設定密碼，無法加密或解密。\n 請到設定-&gt; 一般 -&gt; 密碼，設定一個密碼。</string>
     <string name="encrypt_file_content">加密檔案內容</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">無法加密檔案內容。檔案未儲存。</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">無法解密檔案內容。你的密碼錯了嗎？這個檔案真的是用Markors的AES加密過的嗎？</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">已設好密碼。設定新密碼將會覆蓋既存的密碼，如果你忘了新密碼，可能不能再讀取檔案了。</string>
     <string name="code_block">程式碼區塊</string>
     <string name="add_completion_date">加入完成日期</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">將待辦事項標示為已完成時，加入完成日期</string>
+    <string name="file_description_format">檔案加密格式</string>
     <string name="loading_default_value">正在載入預設值</string>
     <string name="file_settings">檔案設定</string>
     <string name="search_and_replace">搜尋 / 取代</string>
