--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -141,7 +141,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">延遲的閃亮標記以毫秒更新記時，較低值會提早開始標記，但會降低效能與耗電。</string>
     <string name="highlighting_enabled_or_not__appspecific">不管輸入的文字是否已標記都要調整</string>
     <string name="control_font_size_in_editor">調整在編輯器中使用的字型</string>
-    <string name="textactions_show_useful_actions_description__appspecific">在底部顯示工作列按鈕以快速修改輸入的內容或執行其他動作。</string>
+    <string name="textactions_show_useful_actions_description__appspecific">在底部顯示工作列按鈕以快速修改輸入的內容或執行其他文字動作。</string>
     <string name="load_last_opened_folder_at_startup">啟動時開啟最後使用的資料夾</string>
     <string name="format">格式</string>
     <string name="contexts">全文</string>
@@ -162,20 +162,20 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending">標記行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">標記末尾有兩三個空格的行</string>
     <string name="use_monospace_for_code">程式碼使用 Monospace</string>
-    <string name="disable_code_block_highlight">停用程式碼語法突顯</string>
-    <string name="auto_renumber_ordered_list">有序清單自動重新編號</string>
-    <string name="auto_renumber_ordered_list_slowdown">此設定可能影響應用程式效能</string>
+    <string name="disable_code_block_highlight">停用高亮程式碼區塊</string>
+    <string name="auto_renumber_ordered_list">自動重新編號已排序的清單</string>
+    <string name="auto_renumber_ordered_list_slowdown">這個選項可能影響應用效能</string>
     <string name="use_different_fonttype_slow_down">動態地變更字型將影響程式效能</string>
     <string name="general">平常</string>
     <string name="resources">來源</string>
     <string name="space_between_lines_in_percent">行距以百分比表示</string>
     <string name="line_spacing">行距</string>
     <string name="archive_does_move_done_tasks">移動完成的工作到相同資料夾的指定文件上。</string>
-    <string name="sort_tasks_by_selected_order">依所選的順序對任務進行排列</string>
+    <string name="sort_tasks_by_selected_order">依所選的順序進行任務排列</string>
     <string name="special_key">特殊鍵</string>
     <string name="key_page_up">往上頁 (Page Up)</string>
     <string name="key_page_down">往下頁 (Page Down)</string>
-    <string name="move_text_one_line_up">移動文字到上一行</string>
+    <string name="move_text_one_line_up">往上面一行移動文字</string>
     <string name="move_text_one_line_down">移動文字到下一行</string>
     <string name="start_new_line_below">在底下開始新的一行</string>
     <string name="key_pos_1">起始行 (Pos Home)</string>
@@ -186,7 +186,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">表格</string>
     <string name="start_on_bottom">從底端開始</string>
     <string name="start_on_bottom_when_loading_document">當載入文件後，游標位於末尾</string>
-    <string name="unordered_list_character">無序清單項目符號</string>
+    <string name="unordered_list_character">未排序的清單字元</string>
     <string name="character_to_start_items_of_unordered_list_with">這些符號用來表示無序清單</string>
     <string name="unordered_list_char_dash">連接號 (-)</string>
     <string name="unordered_list_char_asterisk">星號 (*)</string>
